[gd_scene load_steps=8 format=2]

[ext_resource path="res://Escenas/games/math/Runas.gd" type="Script" id=1]
[ext_resource path="res://Assets/ost/Ã©sto es una carrera a contra reloj, por cierto.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/sfx/bad.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Visual/fondos/fond2.png" type="Texture" id=4]
[ext_resource path="res://Assets/sfx/m5.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/sfx/m2.wav" type="AudioStream" id=6]

[sub_resource type="Theme" id=1]

[node name="Runas" type="Control"]
margin_left = 116.0
margin_top = 80.0
margin_right = 116.0
margin_bottom = 80.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -305.0
margin_top = -139.0
margin_right = 1855.0
margin_bottom = 941.0
rect_scale = Vector2( 0.775256, 0.775256 )
texture = ExtResource( 4 )

[node name="TargetLabel" type="Label" parent="."]
margin_left = 70.0
margin_top = 32.0
margin_right = 227.0
margin_bottom = 81.0

[node name="CurrentLabel" type="Label" parent="."]
margin_left = 28.0
margin_top = 317.0
margin_right = 185.0
margin_bottom = 366.0

[node name="TimeLabel" type="Label" parent="."]
margin_left = 49.0
margin_top = 140.0
margin_right = 206.0
margin_bottom = 189.0

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
margin_left = 422.0
margin_top = 221.0
margin_right = 1142.0
margin_bottom = 513.0
columns = 3

[node name="RunaButton0" type="Button" parent="GridContainer"]
margin_right = 33.0
margin_bottom = 55.0
theme = SubResource( 1 )
toggle_mode = true
text = "0"

[node name="RunaButton1" type="Button" parent="GridContainer"]
margin_left = 37.0
margin_right = 70.0
margin_bottom = 55.0
toggle_mode = true
text = "0"

[node name="RunaButton2" type="Button" parent="GridContainer"]
margin_left = 74.0
margin_right = 107.0
margin_bottom = 55.0
toggle_mode = true
text = "0"

[node name="RunaButton3" type="Button" parent="GridContainer"]
margin_top = 59.0
margin_right = 33.0
margin_bottom = 114.0
toggle_mode = true
text = "0"

[node name="RunaButton4" type="Button" parent="GridContainer"]
margin_left = 37.0
margin_top = 59.0
margin_right = 70.0
margin_bottom = 114.0
toggle_mode = true
text = "0"

[node name="RunaButton5" type="Button" parent="GridContainer"]
margin_left = 74.0
margin_top = 59.0
margin_right = 107.0
margin_bottom = 114.0
toggle_mode = true
text = "0"

[node name="RunaButton6" type="Button" parent="GridContainer"]
margin_top = 118.0
margin_right = 33.0
margin_bottom = 173.0
toggle_mode = true
text = "0"

[node name="RunaButton7" type="Button" parent="GridContainer"]
margin_left = 37.0
margin_top = 118.0
margin_right = 70.0
margin_bottom = 173.0
toggle_mode = true
text = "0"

[node name="RunaButton8" type="Button" parent="GridContainer"]
margin_left = 74.0
margin_top = 118.0
margin_right = 107.0
margin_bottom = 173.0
toggle_mode = true
text = "0"

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 83.0
one_shot = true

[node name="CastButton" type="Button" parent="."]
margin_left = 415.0
margin_top = 427.0
margin_right = 540.0
margin_bottom = 482.0

[node name="InfoLabel" type="Label" parent="."]
margin_left = 755.0
margin_top = 289.0
margin_right = 916.0
margin_bottom = 338.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="bad" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.273
pitch_scale = 0.6

[node name="nice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.545

[node name="nice2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.75

[node name="over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.48

[node name="TweenUI" type="Tween" parent="."]
